2007-07-09	Nicholas Niro	<nik_89@neuroponic.com>
	* src/misc/bitmap.c (bitmap_process2):
	Renamed to bitmap_process.
	
	* src/misc/bitmap.c (bitmap_process):
	Did fixes to the big endian compatibility code.

2007-07-07	Nicholas Niro	<nik_89@neuroponic.com>
	* src/debug.c (Neuro_DebugChannel):
	Added support even if the Init function wasn't
	called to allow external programs to use the
	debugging without having to use the X11 display.

	* src/extlib/sdl.c (Lib_CreateVObject):
	Made it so the function use default values in
	case 0 values were input for the masks and the depth.

	* src/extlib/sdl.c:
	Created a new static function that can be used to
	get default masks for the various pixel depths.

	* src/extlib/sdl.c (Lib_VideoInit):
	Made the function use the new default mask function.

	* src/misc/bitmap.c (process_Gradual_BMP):
	now creates a v_object with 0 masks to make use
	of the new defaulting code in the drivers.

	* src/extlib/x11.c (Lib_CreateVObject):
	changed an argument to XCreateImage to a static 16 value
	-- it used to put the default depth but when the default
	depth was 24, the function wouln't work, it takes only
	8, 16 or 32. This fixed an annoying bug in the 24 bpp
	depth.

2007-07-05	Nicholas Niro	<nik_89@neuroponic.com>
	* src/memory/ebuf.c (Neuro_AllocEBuf):
	Added a check to see if the buffer inside an
	ebuf element is not NULL. Also implemented
	the new debug channel into the module.

2007-06-03	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/x11.c (Lib_RenderUnicode):
	changed the static argument value 16 (bpp) that
	was used to create the v_object for the character
	to a call to get the current default depth in use.

2007-05-30	Nicholas Niro	<nik_89@neuroponic.com>
	* src/events/events.c (addKeyEvent): 
	removed keyboard limitation from only one callback 
	per keys to an infinite amount.

2007-05-29	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/sdl.c (u32 KeySymsTranslateTable): 
	added more elements to the keymap translation 