@@ -1,0 +1,13 @@
+/* global.h 
+ *
+ * internal header file
+ */
+
+#ifndef __GLOBAL_H
+#define __GLOBAL_H
+
+#include "config.h"
+
+#define NEURO_PROJECT_NAMESPACE PACKAGE
+
+#endif /* NOT __GLOBAL_H */
