@@ -30,6 +30,7 @@
 #include <string.h> /* strcmp */
 
 /*-------------------- Local Headers Including ---------------------*/
+#include <global.h>
 #include <ebuf.h>
 
 /*-------------------- Main Module Header --------------------------*/
@@ -42,7 +43,13 @@ NEURO_MODULE_CHANNEL("debug");
 
 typedef struct DEBUG_CHANNEL
 {
-	char *channel; /* should only contain unallocated strings */
+	/* should only contain unallocated strings ie only "" strings. */
+	char *namespace; /* the project's namespace this channel is in <-- NEURO_PROJECT_NAME()*/
+	char *channel; /* the module name, example : bitmap <-- NEURO_MODULE_CHANNEL() */
+	
+	u32 class; /* the class, see debug.h -- enum DEBUG_CLASS */
+	
+	u32 rule; /* 1:+    0:- */
 }DEBUG_CHANNEL;
 
 /*-------------------- Global Variables ----------------------------*/
@@ -52,6 +59,14 @@ typedef struct DEBUG_CHANNEL
 static u8 debug_level = 0;
 
 static EBUF *debug_l;
+
+
+static const char *Debug_Classes[] = {
+	"all",
+	"warn",
+	"error",
+	"trace"
+};
 
 /*-------------------- Static Prototypes ---------------------------*/
 
@@ -148,13 +163,51 @@ IsLittleEndian()
 		return 0;
 }
 
+/* filter should be in the format class<+|->channel (ex: warn+bitmap)
+ * and it can contain a virtually unlimited amount of 
+ * space separated elements.
+ */
 void
-Debug_VerboseChannel(char *channel)
+Neuro_CoreSetFilter(char *project_name, char *filter)
 {
+	/* this function's purpose is to populate
+	 * our filtering ebuffer debug_l.
+	 *
+	 * class and channel can be replaced by a special
+	 * string : all - which will always be matched.
+	 * the string all will be replaced by the character
+	 * '*' to accelerate matching.
+	 *
+	 * the class type will be normalized to small cases
+	 * in case the input instructions used capital letters.
+	 * we will also drop and output a warn if an input
+	 * class contains invalid characters, only letters will
+	 * be accepted.
+	 *
+	 *
+	 * the first thing we will do is separate every elements
+	 * of the filter using Neuro_SepChr2(). Then we will check
+	 * every of them by using the function memchr() to get the
+	 * pointer of the character that is either + or -. In case
+	 * theres none in the element, we drop it and output a warning
+	 * but we still check the others. We then use again Neuro_SepChr2()
+	 * for every elements with their corresponding type <+|->.
+	 *
+	 * This done, we need to loop the ebuffor debug_l to see if
+	 * the filter to be added is already present (in that case, we
+	 * drop the filter and don't output anything) or if the filter
+	 * is contradictory to an existing one, we simply modify the
+	 * existing one to become the new filter.
+	 */
+
+
 	DEBUG_CHANNEL *buf;
 
-	if (!channel)
+	if (!project_name || !filter)
+	{
+		NEURO_ERROR("Invalid argument used", NULL);
 		return;
+	}
 
 	if (Neuro_EBufIsEmpty(debug_l))
 	{
@@ -166,15 +219,14 @@ Debug_VerboseChannel(char *channel)
 
 	buf = Neuro_GiveCurEBuf(debug_l);
 
-
 	if (buf)
-		buf->channel = channel;
+		buf->channel = filter;
 	else
-		NEURO_ERROR("Out of Memory", NULL);
+		NEURO_ERROR("Out of Memory", NULL);	
 }
 
 void
-Neuro_DebugChannel(const char *channel, char *type, char *filename, 
+Neuro_DebugChannel(const char *project_name, const char *channel, char *type, char *filename, 
 		char *funcName, u32 lineNum, u8 output_detailed, char *control, ...)
 {
 	va_list args;
@@ -188,8 +240,10 @@ Neuro_DebugChannel(const char *channel, char *type, char *filename,
 	{
 		Neuro_CreateEBuf(&debug_l);
 
-		Debug_VerboseChannel("Error");
-		Debug_VerboseChannel("Warn");
+		Neuro_SetFilter("Error");
+		Neuro_SetFilter("Warn");
+
+		NEURO_WARN("temporary default debugging set -- 2", NULL);
 	}
 
 	if (Neuro_EBufIsEmpty(debug_l))
@@ -205,7 +259,7 @@ Neuro_DebugChannel(const char *channel, char *type, char *filename,
 		if (!strcmp(channel, buf->channel) || !strcmp(type, buf->channel))
 		{
 			if (output_detailed == 1)
-				fprintf(stderr, "%s : (%s) %s:%s:%d -- ", type, channel, filename, funcName, lineNum);
+				fprintf(stderr, "%s : \"%s\" (%s) %s:%s:%d -- ", type, project_name, channel, filename, funcName, lineNum);
 
 			va_start(args, control);
 			vfprintf(stderr, control, args);
@@ -222,9 +276,12 @@ int
 Debug_Init()
 {
 	Neuro_CreateEBuf(&debug_l);
+	
+	Neuro_SetFilter("Error");
+	Neuro_SetFilter("Warn");
 
-	Debug_VerboseChannel("Error");
-	Debug_VerboseChannel("Warn");
+	NEURO_WARN("temporary default debugging set", NULL);
+
 	return 0;
 }
 
