@@ -21,6 +21,7 @@
 
 /* character generator */
 
+#include <global.h>
 #include <stdlib.h>
 #include <stdio.h>
 
