@@ -1,6 +1,6 @@
 MAJOR=0
 MINOR=49
-MICRO=30
+MICRO=31
 INTERFACE=3
-REVISION=4
+REVISION=5
 BINARY=3
